@@ -28,6 +28,7 @@
  - [DS-216] Migrating items that use additional metadata schemas causes an NPE
  - [DS-219] Internal Server error - include login details of user
  - [DS-221] XMLUI 'current activity' recognises Google Chrome as Safari
+ - [DS-242] Special groups shown for logged in user rather than for user being examined
 
 (Larry Stone)
  - [DS-193] OAI RDF crosswalk fails when DC value is null
